--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.17.1",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0"
